# strategy-miner

./: .gitignore  README.md  pyproject.toml
.github/: labels.yml
.github/ISSUE_TEMPLATE/: strategy_idea.yml
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/cli/: __init__.py  main.py
apps/collector/: __init__.py  main.py
apps/console/: __init__.py  index.html  styles.css
apps/local_pipeline/: __init__.py  main.py
apps/worker/: __init__.py  main.py
artifacts/research_batches/2026-06-10-batch-01/: candidates.json
artifacts/strategies/: strategy_queue.json
artifacts/strategies/cross_exchange_funding_dispersion/: opportunity_report.json  research_report.json  strategy_proposal.json
artifacts/strategies/funding_carry_vol_filter/: data_collection_plan.json  (+4 more)
configs/: default.toml  local_windows_data.example.toml
docs/: AGENT_COLLABORATION_ZH.md  ARCHITECTURE.md  CLAUDE_CODE_USER_GUIDE_ZH.md  DATA_SOURCES.md  OPERATOR_PROFILE_ZH.md  PIPELINES_AND_STORAGE_ZH.md  PROJECT_PLAN_ZH.md  RESEARCH_LOG_ZH.md  STRATEGY_INTAKE_ZH.md  WINDOWS_LOCAL_PIPELINE_ZH.md
migrations/: 0001_init.sql
schemas/: backtest_request.schema.json  data_collection_plan.schema.json  manual_gate_checklist.schema.json  metadata_resolution_plan.schema.json  opportunity_report.schema.json  research_report.schema.json  strategy_proposal.schema.json
tests/: __init__.py  test_agent_interface.py  test_collector.py  test_connectors.py  test_data_lake_replay.py  test_guardrails.py  test_local_pipeline.py  test_models.py  test_strategies.py  test_strategy_artifacts.py
(+26 files in other folders)
